--- a/prboom.desktop
+++ b/prboom.desktop
@@ -1,10 +1,9 @@
 [Desktop Entry]
-Encoding=UTF-8
 Name=PrBoom
 Comment=A version of classic 3D shoot-em-up game DOOM
 Comment[pl]=Wersja klasycznej strzelaniny 3D DOOM
 Exec=prboom
-Icon=prboom.png
+Icon=prboom
 Terminal=false
 Type=Application
 Categories=Game;X-FPPGame;
